# simple-todo

./: alembic.ini  db.py  main.py  models.py  pyproject.toml  schemas.py  todo_app.db
alembic/versions/: 61816a8a9137_first_revision.py  cac7303b6978_second_revision.py
