
[project]
name = "simple-todo"
version = "0.1.0"
description = "Simple todo-list using fastapi, sqlalchemy, alembic, authentication"
authors = [
    {name = "Gabriel Martin del Campo y Eternod", email = "gmartindelcye@gmail.com"},
]
dependencies = [
    "sqlalchemy>=2.0.16",
    "alembic>=1.11.1",
    "fastapi>=0.96.1",
    "jinja2>=3.1.2",
    "uvicorn>=0.22.0",
    "python-dotenv>=1.0.0",
    "fastapi-login>=1.9.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
